--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,14 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<title>Secrets</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Secrets{% endblock %}
+
+{% block content %}
 <div class="jumbotron">
 	<div class="container">
 		<h1>Welcome</h1>
 		<p>Are you ready to discover my secret?</p>
-		<a href=" {{ url_for('make_login') }} ">
-			<button class="btn btn-primary btn-lg">Login</button>
-		</a>
+		<a href="{{ url_for('make_login') }}"><button class="btn btn-primary btn-lg">Login</button></a>
 	</div>
 </div>
-</body>
-</html>
+{% endblock %}
+
