--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,38 @@
-<!DOCTYPE HTML>
+{% extends "base.html" %}
+{% from "bootstrap5/form.html" import render_form %}
 
-<html>
-	<head>
-		<title>Login</title>
-	</head>
-	<body>
-        <div class="container">
-		<h1>Login</h1>
-        <!-- This is where our form will go. -->
-		<form method="POST" action="{{ url_for('make_login')}}" novalidate>
-			{{ html_form.csrf_token }}
-			<p>
-				{{ html_form.email.label }} <br> {{ html_form.email(size=30) }}
+{% block title %}Login{% endblock %}
 
-				{% for err in html_form.email.errors %}
-				{{ err }}
-				{% endfor %}
-			</p>
-			<p>
-				{{ html_form.password.label }} <br> {{ html_form.password(size=30) }}
+{% block content %}
+<div class="container">
+    <h1>Login</h1>
+    <!-- This is where our form will go. -->
+        {{ render_form(html_form, novalidate=True) }}
+</div>
+{% endblock %}
 
-				{% for err in html_form.password.errors %}
-				<span style="color:red">{{ err }}</span>
-				{% endfor %}
-			</p>
-			{{ html_form.submit }}
-		</form>
-        </div>
-	</body>
-</html>
+
+
+<!-- Previously solution without Boostrap-Flask extension -->
+<div class="container">
+	<h1>Login</h1>
+	<!-- This is where our form will go. -->
+	<form method="POST" action="{{ url_for('make_login')}}" novalidate>
+		{{ html_form.csrf_token }}
+		<p>
+			{{ html_form.email.label }} <br> {{ html_form.email(size=30) }}
+
+			{% for err in html_form.email.errors %}
+			{{ err }}
+			{% endfor %}
+		</p>
+		<p>
+			{{ html_form.password.label }} <br> {{ html_form.password(size=30) }}
+
+			{% for err in html_form.password.errors %}
+			<span style="color:red">{{ err }}</span>
+			{% endfor %}
+		</p>
+		{{ html_form.submit }}
+	</form>
+</div>
